# agentic_ai

./: README.md  openai_compatibilty.py  pyproject.toml  requirement.txt
agno/: agent_agno.py  multi_agent_agno.py
autogen/: agent.py  mcp.py  quickstart.py  structured_output.py  teams.py
langchain/: 1-intro.ipynb  2-model_intergration.ipynb  3-tools.ipynb  4-messafges.ipynb  5-strucutred_output.ipynb
